feat: add hypermedia
